day18/logs/dag_id=etl_day18/run_id=manual__2023-10-21T15:40:25.006586+00:00/task_id=load_df/attempt=1.log
[2023-10-21T15:40:42.671+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_day18.load_df manual__2023-10-21T15:40:25.006586+00:00 [queued]>
[2023-10-21T15:40:42.685+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_day18.load_df manual__2023-10-21T15:40:25.006586+00:00 [queued]>
[2023-10-21T15:40:42.685+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 1
[2023-10-21T15:40:42.701+0000] {taskinstance.py:1380} INFO - Executing <Task(PythonOperator): load_df> on 2023-10-21 15:40:25.006586+00:00
[2023-10-21T15:40:42.706+0000] {standard_task_runner.py:57} INFO - Started process 4345 to run task
[2023-10-21T15:40:42.712+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'etl_day18', 'load_df', 'manual__2023-10-21T15:40:25.006586+00:00', '--job-id', '63', '--raw', '--subdir', 'DAGS_FOLDER/ETL_day18.py', '--cfg-path', '/tmp/tmpgh8rooeu']
[2023-10-21T15:40:42.716+0000] {standard_task_runner.py:85} INFO - Job 63: Subtask load_df
[2023-10-21T15:40:42.769+0000] {task_command.py:415} INFO - Running <TaskInstance: etl_day18.load_df manual__2023-10-21T15:40:25.006586+00:00 [running]> on host 90cf752d844d
[2023-10-21T15:40:42.867+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='kel11' AIRFLOW_CTX_DAG_ID='etl_day18' AIRFLOW_CTX_TASK_ID='load_df' AIRFLOW_CTX_EXECUTION_DATE='2023-10-21T15:40:25.006586+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-10-21T15:40:25.006586+00:00'
[2023-10-21T15:40:42.918+0000] {base.py:73} INFO - Using connection ID 'postgresql_db' for task execution.
[2023-10-21T15:40:48.199+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/ETL_day18.py", line 93, in load_df
    return postgres_sql_upload.insert_rows('latest', latest_df)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 509, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: INSERT INTO latest  VALUES ('l','o','c','a','t','i','o','n')
                                                                ^

[2023-10-21T15:40:48.212+0000] {taskinstance.py:1398} INFO - Marking task as FAILED. dag_id=etl_day18, task_id=load_df, execution_date=20231021T154025, start_date=20231021T154042, end_date=20231021T154048
[2023-10-21T15:40:48.230+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 63 for task load_df (INSERT has more expressions than target columns
LINE 1: INSERT INTO latest  VALUES ('l','o','c','a','t','i','o','n')
                                                                ^
; 4345)
[2023-10-21T15:40:48.274+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-10-21T15:40:48.299+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
